[project]
name = "koherent"
version = "0.1.2"
description = ""
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "authentikate>=0.10",
    "django-simple-history>=3.8.0",
    "django>5",
]


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict = true

[tool.hatch.build.targets.sdist]
include = ["koherent"]

[tool.hatch.build.targets.wheel]
include = ["koherent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.django-stubs]
django_settings_module = "test_project.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "*/migrations/**",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.uv]
dev-dependencies = [
    "cryptography>=44.0.3",
    "daphne>=4.1.2",
    "pytest-asyncio>=0.26.0",
    "pytest-django>=4.11.1",
]
